# OnTime-tui

./: CHANGELOG.md  Cargo.toml  README.md  notes.norg
src/: cli.rs  main.rs  stops.json  stops.rs
src/stops/: sitemap.rs
