[package]
name = "ontime-cli"
edition = "2021"
version = "1.1.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = { default-features = false, version = "7.1.0" }
serde_json = { default-features = false, version = "1.0.114" }
skim = { default-features = false, version = "0.10.4" }

[dependencies.color-eyre]
version = "0.6.2"
features = ["track-caller"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.time]
version = "0.3"
features = ["macros", "local-offset"]

[dependencies.ureq]
version = "2.9.6"
features = ["json"]
