[package]
name = "ontime-tui"
edition = "2021"
version = "1.1.0"
authors = ["FraI3mega"]
description = "A tui/cli for the OnTime transit timetable system"

[dependencies]
serde = { vesrion = "1", features = ["derive"] }
comfy-table = "7.1.0"
skim = "0.10.4"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6.3"
confy = "0.6.1"

[dependencies.time]
version = "0.3"
features = ["macros", "local-offset"]

[dependencies.ureq]
version = "2.9.6"
features = ["json"]
